--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
+    "build": "cd client && npm ci && npm run build",
+    "vercel-build": "cd client && npm ci && npm run build"
   },
   "keywords": ["education", "learning", "pim"],
   "author": "",
