--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "build": "cd client && npm ci && npm run build",
-    "vercel-build": "cd client && npm ci && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "vercel-build": "cd client && npm install && npm run build"
   },
   "keywords": ["education", "learning", "pim"],
   "author": "",
