--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "client/build",
-  "installCommand": "cd client && npm ci",
+  "installCommand": "cd client && npm install",
   "framework": null,
   "rewrites": [
     {
