Update: Add video management scripts and update database with video URLs

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,10 @@ Thumbs.db
 # Uploads
 server/uploads/*
 !server/uploads/.gitkeep
+# Video files are too large for GitHub - use external storage or Git LFS
+server/uploads/videos/*.mp4
+server/uploads/videos/*.webm
+server/uploads/videos/*.mov
 
 # Debug
 *.log
