--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,11 +3,14 @@ nixPkgs = ["git", "git-lfs", "nodejs-18_x", "npm"]
 
 [phases.install]
 cmds = [
-  "git lfs install",
-  "git lfs pull --all",
-  "echo 'Checking video files...'",
+  "echo '=== Installing Git LFS ==='",
+  "git lfs install || echo 'Git LFS install failed'",
+  "echo '=== Pulling Git LFS files ==='",
+  "git lfs pull --all || echo 'Git LFS pull failed'",
+  "echo '=== Checking video files ==='",
   "ls -la server/uploads/videos/ 2>&1 || echo 'Video directory not found'",
   "find server/uploads/videos -name '*.mp4' -type f 2>&1 | head -5 || echo 'No video files found'",
+  "echo '=== Installing dependencies ==='",
   "cd server && npm install",
   "cd ../client && npm install"
 ]
