Fix: Remove npm from nixPkgs as it comes with nodejs-18_x

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["git", "git-lfs", "nodejs-18_x", "npm"]
+nixPkgs = ["git", "git-lfs", "nodejs-18_x"]
 
 [phases.install]
 cmds = [
