--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,13 +11,13 @@ cmds = [
   "ls -la server/uploads/videos/ 2>&1 || echo 'Video directory not found'",
   "find server/uploads/videos -name '*.mp4' -type f 2>&1 | head -5 || echo 'No video files found'",
   "echo '=== Installing server dependencies ==='",
-  "cd server && npm install || exit 1",
+  "(cd server && npm install) || exit 1",
   "echo '=== Installing client dependencies ==='",
-  "cd ../client && npm install || exit 1"
+  "(cd client && npm install) || exit 1"
 ]
 
 [phases.build]
-cmds = ["cd client && npm run build"]
+cmds = ["(cd client && npm run build)"]
 
 [start]
 cmd = "cd server && node index.js"
