Fix: Make build fail if Git LFS pull fails or no video files found

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,10 +5,17 @@ nixPkgs = ["git", "git-lfs", "nodejs-18_x"]
 cmds = [
   "echo '=== Installing Git LFS ==='",
   "git lfs install || true",
+  "echo '=== Checking Git LFS status ==='",
+  "git lfs ls-files | head -10 || echo 'No LFS files tracked'",
   "echo '=== Pulling Git LFS files ==='",
-  "git lfs pull --all || echo 'Warning: Git LFS pull failed, continuing...'",
+  "git lfs pull --all",
+  "echo '=== Verifying Git LFS pull ==='",
+  "if [ $? -ne 0 ]; then echo 'ERROR: Git LFS pull failed!'; exit 1; fi",
   "echo '=== Checking video files ==='",
   "ls -la server/uploads/videos/ 2>&1 || echo 'Video directory not found'",
+  "VIDEO_COUNT=$(find server/uploads/videos -name '*.mp4' -type f 2>/dev/null | wc -l)",
+  "echo \"Found $VIDEO_COUNT video files\"",
+  "if [ $VIDEO_COUNT -eq 0 ]; then echo 'ERROR: No video files found after Git LFS pull!'; exit 1; fi",
   "find server/uploads/videos -name '*.mp4' -type f 2>&1 | head -5 || echo 'No video files found'",
   "echo '=== Installing server dependencies ==='",
   "npm install --prefix server || exit 1",
