Add: More detailed 404 error diagnostics and better Git LFS error handling

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,9 +8,10 @@ cmds = [
   "echo '=== Checking Git LFS status ==='",
   "git lfs ls-files | head -10 || echo 'No LFS files tracked'",
   "echo '=== Pulling Git LFS files ==='",
-  "git lfs pull --all",
-  "echo '=== Verifying Git LFS pull ==='",
-  "if [ $? -ne 0 ]; then echo 'ERROR: Git LFS pull failed!'; exit 1; fi",
+  "git lfs pull --all 2>&1",
+  "LFS_EXIT_CODE=$?",
+  "echo '=== Git LFS pull exit code:' $LFS_EXIT_CODE",
+  "if [ $LFS_EXIT_CODE -ne 0 ]; then echo 'ERROR: Git LFS pull failed with exit code' $LFS_EXIT_CODE; echo 'This may be normal if Railway does not support Git LFS. Consider using Railway volumes instead.'; exit 1; fi",
   "echo '=== Checking video files ==='",
   "ls -la server/uploads/videos/ 2>&1 || echo 'Video directory not found'",
   "VIDEO_COUNT=$(find server/uploads/videos -name '*.mp4' -type f 2>/dev/null | wc -l)",
