Fix: Improve UI sizing and fix video streaming issues - Reduce text sizes and spacing in ExamRegistration, MyExams, Booking, RoomBooking pages - Add HEAD request support in video-stream route - Improve error handling and logging for video loading - Add /api/admin/storage/status endpoint for video file diagnostics - Add scripts for checking LFS pointer files

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,15 +9,44 @@ cmds = [
   "git lfs ls-files | head -10 || echo 'No LFS files tracked'",
   "echo '=== Pulling Git LFS files ==='",
   "git lfs pull --all 2>&1",
-  "LFS_EXIT_CODE=$?",
-  "echo '=== Git LFS pull exit code:' $LFS_EXIT_CODE",
-  "if [ $LFS_EXIT_CODE -ne 0 ]; then echo 'ERROR: Git LFS pull failed with exit code' $LFS_EXIT_CODE; echo 'This may be normal if Railway does not support Git LFS. Consider using Railway volumes instead.'; exit 1; fi",
+  "LFS_EXIT=$?",
+  "echo 'Git LFS pull exit code:' $LFS_EXIT",
+  "if [ $LFS_EXIT -ne 0 ]; then echo '⚠️  WARNING: Git LFS pull failed. This may be normal if Railway does not support Git LFS.'; fi",
+  "echo '=== Verifying LFS files were pulled ==='",
+  "cd server/uploads/videos 2>/dev/null || mkdir -p server/uploads/videos",
+  "cd server/uploads/videos",
+  "LFS_POINTERS=0",
+  "REAL_FILES=0",
+  "for file in *.mp4 *.webm *.mov 2>/dev/null; do",
+  "  if [ -f \"$file\" ]; then",
+  "    size=$(stat -f%z \"$file\" 2>/dev/null || stat -c%s \"$file\" 2>/dev/null || echo 0)",
+  "    if [ \"$size\" -lt 200 ]; then",
+  "      content=$(head -c 100 \"$file\" 2>/dev/null || echo '')",
+  "      if echo \"$content\" | grep -q 'version https://git-lfs.github.com/spec/v1'; then",
+  "        echo \"⚠️  LFS POINTER: $file (${size} bytes)\"",
+  "        LFS_POINTERS=$((LFS_POINTERS + 1))",
+  "      fi",
+  "    else",
+  "      size_mb=$(echo \"scale=2; $size / 1048576\" | bc 2>/dev/null || echo \"$(($size / 1048576))\")",
+  "      echo \"✅ REAL FILE: $file (${size_mb} MB)\"",
+  "      REAL_FILES=$((REAL_FILES + 1))",
+  "    fi",
+  "  fi",
+  "done",
+  "echo ''",
+  "echo '📊 Video Files Summary:'",
+  "echo \"  Real video files: $REAL_FILES\"",
+  "echo \"  LFS pointer files: $LFS_POINTERS\"",
+  "if [ \"$LFS_POINTERS\" -gt 0 ]; then",
+  "  echo ''",
+  "  echo '⚠️  WARNING: Some video files are LFS pointers and may not work correctly.'",
+  "  echo '   Consider using Railway Volumes or external storage for video files.'",
+  "fi",
+  "cd ../..",
   "echo '=== Checking video files ==='",
-  "ls -la server/uploads/videos/ 2>&1 || echo 'Video directory not found'",
-  "VIDEO_COUNT=$(find server/uploads/videos -name '*.mp4' -type f 2>/dev/null | wc -l)",
-  "echo \"Found $VIDEO_COUNT video files\"",
-  "if [ $VIDEO_COUNT -eq 0 ]; then echo 'ERROR: No video files found after Git LFS pull!'; exit 1; fi",
-  "find server/uploads/videos -name '*.mp4' -type f 2>&1 | head -5 || echo 'No video files found'",
+  "ls -la server/uploads/videos/ 2>&1 | head -15 || echo 'Video directory not found'",
+  "VIDEO_COUNT=$(find server/uploads/videos -name '*.mp4' -o -name '*.webm' -o -name '*.mov' 2>/dev/null | wc -l)",
+  "echo \"Total video files found: $VIDEO_COUNT\"",
   "echo '=== Installing server dependencies ==='",
   "npm install --prefix server || exit 1",
   "echo '=== Installing client dependencies ==='",
