Add complete Room Booking System with admin dashboard and auto-notifications
Features: Room & booking management, approval workflow, admin dashboard, real-time statistics, auto-notifications to admins

Documentation: Complete API reference, quick start guide, system health check scripts

System Status: Production ready with 12 rooms, 3,232 users

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node --no-deprecation index.js"
+    "start": "node --no-deprecation index.js",
+    "setup:rooms": "node database/setup-rooms.js",
+    "check:system": "node database/check-system.js",
+    "seed": "node database/seed.js",
+    "create:admin": "node database/create-instructor.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.962.0",
